--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
                     <a class="nav-link" href="#result">Result</a>
                     <a class="nav-link" href='#conclusion'>Conclusion</a>
                     <a class='nav-link' href='#reference'>Reference</a>
+                    <a class='nav-link' href='assets/file/Malware_Report.pdf' target="_blank">Report</a>
                 </div>
             </div>
             
