--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
                     <a class="nav-link" href='#conclusion'>Conclusion</a>
                     <a class='nav-link' href='#reference'>Reference</a>
                     <a class='nav-link' href='assets/file/Malware_Report.pdf' target="_blank">Report</a>
+                    <a class='nav-link' href = 'https://github.com/YikaiHao/DSC180_Winter' target="_blank">Repository</a>
                 </div>
             </div>
             
